--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "npm": "8.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
